kubernetes/nginx-ingress-demo/demo2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo2
  labels:
    app: nginx-demo2
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-demo2
  template:
    metadata:
      name: nginx-demo1
      labels:
        app: nginx-demo2
    spec:
      containers:
        - name: nginx-demo2
          image: registry.cn-hangzhou.aliyuncs.com/gpg_dev/nginx2:1.0.0
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
