kubernetes/nginx-ingress-demo/demo1-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo1-svc-lb
  namespace: demo
spec:
  selector:
    app: nginx-demo1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: nginx-demo1-svc-lb
  type: LoadBalancer
