kubernetes/nginx-ingress-demo/demo1-service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo1-svc
  namespace: demo
spec:
  selector:
    app: nginx-demo1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
