kubernetes/nginx-ingress-demo/demo2-ingress-lb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo2-ingress-lb
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/rewrites: "serviceName=nginx-demo2-svc-lb rewrite=/"
  namespace: demo
spec:
  ingressClassName: nginx
  rules:
    - host: lb.gpg123.vip
      http:
        paths:
          - path: /nginx2
            pathType: Prefix
            backend:
              service:
                name: nginx-demo2-svc-lb
                port:
                  number: 80
